--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,47 @@
 .App {
-  text-align: center;
+  position: relative;
+  background-color: var(--background-1);
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  /* Bacground colors */
+  --background-1: #FFFFFF;
+  --background-2: #D9D9D9;
+  --background-3: #1E1E1E;
+  --background-4: #54777C;
+  --background-5: #F5F5F5;
+
+  /* font colors */
+  --font-1: #000000;
+  --font-2: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.NAVBAR {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.SIDENAV {
+  position: fixed;
+  right: 20px;
+  top: 100px;
+  z-index: 1000;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
+.col {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cursor:hover {
+  cursor: pointer;
 }
