--- a/src/components/CONTACTS.css
+++ b/src/components/CONTACTS.css
@@ -30,10 +30,30 @@ input , textarea {
     flex: 1;
     flex-wrap: wrap;
 }
+.email-btn {
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+}
+.email-btn button {
+    padding: 10px;
+    background-color: #FD0909;
+    color: white;
+    border-radius:20px ;
+    border: none;
+    font-size: medium;
+    font-weight: bold;
+}
+
+.email-btn button:hover {
+    padding: 10px;
+    background-color: #fd0909a8;
+    
+}
 .CONTACTS form .row  input{
     flex: 1;
     height: 30px;
-    
+   
 }
 
 form .submit {
