--- a/src/components/CONTACTS.css
+++ b/src/components/CONTACTS.css
@@ -43,6 +43,7 @@ input , textarea {
     border: none;
     font-size: medium;
     font-weight: bold;
+    margin-bottom: 5px;
 }
 
 .email-btn button:hover {
@@ -73,6 +74,11 @@ textarea {
    min-height: 100%;
    min-width: 100%;
    padding-bottom: 5px;
+}
+
+.socials {
+    margin-top: 5px;
+    font-size: larger;
 }
 
 /* Add a CSS class for the fade-in animation */
